<resources>
    <string name="app_name">Phone Photo Prints App</string>
    <string name="txtTitle">Phone Photo Prints</string>
    <string name="txtPrntNumber">Number of Prints</string>
    <string name="txtResults"></string>
    <string name="radioPrnts">4 x 6 (19 cents)</string>
    <string name="radioPrnts2">5 x 7 (49 cents)</string>
    <string name="radioPrints3">8  x 10 (79 cents)</string>
    <string name="btnOrder">Order Prints</string>
</resources>
